# electionguard-c

./: .aspell-wordlist.txt  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile  Makefile.mk  README-windows.md  README.md  README.rst  azure-devops.yaml  default.nix  derivation.nix  lgtm.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  generic_issue.md
.github/workflows/: pr-workflow.yml  release-workflow.yml
cmake/: FindGMP.cmake  FindSphinx.cmake
doc/: .gitignore  conf.py  decryption.rst  index.rst  keyceremony.rst  voting.rst
doc/api/: index.rst  trustee_state.rst
doc/api/decryption/: coordinator.rst  messages.rst
doc/api/keyceremony/: coordinator.rst  messages.rst
doc/api/voting/: encrypter.rst
docs/: CMakeLists.txt  Doxyfile.in  conf.py  decryption.rst  examples.rst  keyceremony.rst  voting.rst
docs/api/: crypto.rst  index.rst  max_values.rst
docs/api/api/: config.rst  create_election.rst  encrypt_ballot.rst  load_ballots.rst  record_ballots.rst  tally_votes.rst
docs/api/decryption/: trustee.rst
docs/api/keyceremony/: trustee.rst
docs/api/voting/: coordinator.rst  messages.rst  tracker.rst
docs/examples/: api.rst  simple.rst
examples/: CMakeLists.txt  README.md  README.rst  simple.mk
examples/api/: CMakeLists.txt  default.nix  main.c
examples/ballot_parser/: CMakeLists.txt  main.c
examples/ballot_parser/ballot_samples/: boundary_names  exploit  exploit2  valid  valid2
examples/simple/: CMakeLists.txt  main.c  main_decryption.c  main_decryption.h  main_key_ceremony.c  main_key_ceremony.h  main_keyceremony.c  main_keyceremony.h  main_params.h  main_rsa.c  main_rsa.h  main_voting.c  main_voting.h
include/: README.md  README.rst  crypto.h  max_values.h  trustee_state.h
include/decryption/: README.md  coordinator.h  messages.h  trustee.h
include/electionguard/: crypto.h  file.h  max_values.h  rsa.h  secure_zero_memory.h  trustee_state.h
include/electionguard/api/: README.rst  config.h  create_election.h  encrypt_ballot.h  load_ballots.h  record_ballots.h  tally_votes.h
include/electionguard/decryption/: README.rst  coordinator.h  trustee.h
include/electionguard/keyceremony/: coordinator.h  messages.h  trustee.h
include/electionguard/voting/: coordinator.h  encrypter.h  messages.h  tracker.h
include/keyceremony/: README.md  README.rst  coordinator.h  messages.h  trustee.h
include/voting/: README.md  README.rst  coordinator.h  encrypter.h  messages.h  tracker.h
makefiles/: cflags.mk  libelectionguard.mk
src/: crypto.c  crypto_reps.h
src/decryption/: coordinator.c  message_reps.h  trustee.c
src/electionguard/: a.out  bignum.c  bignum.h  crypto.c  crypto_reps.h  directory.c  directory.h  file.c  log.h  random_source.c  random_source.h  random_source.h.in  rsa.c  secure_zero_memory.c  sha2-openbsd.c  sha2-openbsd.h  trustee_state_rep.h  uint4096.c  uint4096.h  uint4096.h.gch  uthash.h
src/electionguard/api/: base_hash.c  base_hash.h  create_election.c  encrypt_ballot.c  filename.c  filename.h  load_ballots.c  record_ballots.c  tally_votes.c
src/electionguard/decryption/: coordinator.c  message_reps.h  trustee.c
src/electionguard/keyceremony/: coordinator.c  message_reps.h  trustee.c
src/electionguard/serialize/: builtins.c  builtins.h  crypto.c  crypto.h  decryption.c  decryption.h  keyceremony.c  state.h  trustee_state.c  trustee_state.h  voting.c  voting.h
src/electionguard/voting/: a.out  ballot_collection.c  ballot_collection.h  coordinator.c  encrypter.c  message_reps.h  messages.c  nouns.c  tracker.c
src/keyceremony/: coordinator.c  trustee.c
src/serialize/: builtins.c  builtins.h  crypto.c  crypto.h  decryption.c  decryption.h  keyceremony.c  keyceremony.h  state.c  voting.c
src/voting/: coordinator.c  encrypter.c  message_reps.h  nouns.h  num_ballots.h  tracker.c
test/: main_rsa.c
